--- a/books/eval.ipynb
+++ b/books/eval.ipynb
@@ -81,7 +81,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "triplet_preactresembnet18_hinge_adam_ferp_emb32_001\n"
+      "triplet_preactresembnet18_hinge_adam_ferp_emb32_001\n",
+      "triplet_resnetemb18_hinge_adam_ferp_emb32_001\n"
      ]
     }
    ],
